@@ -30,8 +30,9 @@
       <commandset>LDL,MLC,PML,DYN</commandset>
     </general>
     <usb>
-      <manufacturer>hp</manufacturer>
-      <model>psc 1400 series</model>
+      <manufacturer>HP</manufacturer>
+      <model>PSC 1400 series</model>
+      <commandset>LDL,MLC,PML,DYN</commandset>
     </usb>
   </autodetect>
   <functionality>B</functionality>
