@@ -1,3 +1,8 @@
+2006-01-03  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-PSC_1400.xml: Corrected IEEE 1284
+	  information (RH bug #176493).
+
 2005-12-21  Tim Waugh <twaugh@redhat.com>
 
 	* printer/Okidata-ML_320.xml: Added IEEE 1284 information (RH
